zien24_implementation/org/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Aantal_aanmeldingen_per_maand__c</fullName>
        <label>Aantal aanmeldingen per maand</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aantal_woningen_in_aanbod__c</fullName>
        <label>Aantal woningen in aanbod</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branchevereniging__c</fullName>
        <label>Branchevereniging</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Initials__c</fullName>
        <label>Contact Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exact_Online_Id__c</fullName>
        <externalId>true</externalId>
        <label>Exact Online Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Contact_Email__c</fullName>
        <label>Financial Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Contact__c</fullName>
        <label>Financial Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_compleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding compleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Productiecheck_gedaan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Productiecheck gedaan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rang__c</fullName>
        <label>Rank</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>critical</fullName>
                </value>
                <value>
                    <fullName>pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamviewersessie_Ingepland__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teamviewersessie Ingepland</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Teamviewersessie_afgehandeld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teamviewersessie afgehandeld</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>